# Vulkan-Renderer

./: .env.cmake  CMakeLists.txt  imgui.ini  mingwBuild.bat
.cache/clangd/index/: _fixes.hpp.43CECCE16C40909F.idx  _matrix_vectorize.hpp.BFE2B5A22764027A.idx  _noise.hpp.FB89589D597D4177.idx  _vectorize.hpp.75866F0CE1CD4AAB.idx  associated_min_max.hpp.6C449F8D1781FD31.idx  associated_min_max.inl.A5E3F4A8275B542A.idx  bit.hpp.B0FEBCE1FC4290FB.idx  bit.inl.02E6B4E122157FE8.idx  bitfield.hpp.3B1ADB3299C407F7.idx  bitfield.inl.8CEB91F47BFFED97.idx  closest_point.hpp.FC98DFCD088EC8FB.idx  closest_point.inl.63E1171D3901B90B.idx  color_encoding.hpp.4900CD174848B57A.idx  color_encoding.inl.288E42AACB1DD161.idx  color_space.hpp.C5EED8C794EF5AF8.idx  color_space.hpp.E194BE7270A5E528.idx  color_space.inl.14AB122D374B9F29.idx  color_space.inl.163BC0BF51EAF2AE.idx  color_space_YCoCg.hpp.5BCE8BC9F7361B9E.idx  color_space_YCoCg.inl.AB1ED25B43537ABB.idx  common.hpp.227C6999329DF447.idx  common.hpp.F9119430043CC067.idx  common.inl.064E7841B50A5505.idx  compatibility.hpp.B7F230964B6C2973.idx  compatibility.inl.98D5E575E36AA7D4.idx  component_wise.hpp.B1E44647ED74D447.idx  component_wise.inl.E161D01CE4BC6D77.idx  compute_common.hpp.A3B42ECCD8ABD769.idx  compute_vector_decl.hpp.6273A5BB15502811.idx  compute_vector_relational.hpp.88E9CD9900C29AC1.idx  constants.hpp.26C95A728699DC9E.idx  constants.inl.80FC093B2C17BB06.idx  context.c.B81088216022C563.idx  device.cpp.C9DB01A41EA05802.idx  device.hpp.9BEA19A6845EDFF8.idx  dual_quaternion.hpp.EB2C16F076B03BF7.idx  dual_quaternion.inl.D4186B9769CB052C.idx  easing.hpp.46AFD5DE8E9ECEE9.idx  easing.inl.7A601CA63987E8BF.idx  egl_context.c.12075C792FB330FB.idx  (+401 more)
shaders/: frag.spv  shader.frag  shader.frag.spv  shader.vert
src/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  uniform.cpp  uniform.hpp  validation_layers.cpp  validation_layers.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
